# pros5

./:   .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  limine.conf
Kernel/: linker.ld
Kernel/include/: Papiez.hpp
Kernel/include/Drivers/: ATA.hpp  Framebuffer.hpp
Kernel/include/FS/: DevFS.hpp  PartitionTable.hpp  VFS.hpp
Kernel/include/Hardware/: GDT.hpp  IDT.hpp  Port.hpp
Kernel/include/Lib/: Bitmap.hpp  Log.hpp  String.hpp  Types.hpp  Vector.hpp  icxxabi.h
Kernel/include/MM/: Heap.hpp  KernelHeap.hpp  MemoryManager.hpp
Kernel/src/: main.cpp
Kernel/src/Boot/: boot.asm
Kernel/src/Drivers/: ATA.cpp  Framebuffer.cpp  FramebufferConsole.cpp
Kernel/src/FS/: DevFS.cpp  VFS.cpp
Kernel/src/Hardware/: GDT.asm  GDT.cpp  IDT.asm  IDT.cpp  Port.cpp
Kernel/src/Lib/: Bitmap.cpp  Log.cpp  StackSmashProtector.cpp  String.cpp  icxxabi.cpp
Kernel/src/MM/: Heap.cpp  KernelHeap.cpp  MemoryManager.cpp  PMM.cpp  VMM.cpp
Meta/: build.sh  gcc.sh  yasm.sh
